# langgraph-practice

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  WORKFLOW.md  pyproject.toml
.claude/hooks/: enforce-single-pr.sh  enforce-step-by-step.sh
docs/: PR_NOTES.md  learning-langgraph-step-by-step.md  requirements.md  technology-stack-documentation.md  user-preferences.md  workflow.md
email_assistant/: __init__.py  cli.py
email_assistant/graphs/: __init__.py  simple_graph.py
email_assistant/models/: __init__.py  state.py
email_assistant/nodes/: __init__.py  email_processors.py
tests/: __init__.py  conftest.py
tests/unit/: test_cli.py
tests/unit/graphs/: __init__.py  test_simple_graph.py
tests/unit/models/: test_state.py
tests/unit/nodes/: __init__.py  test_basic_nodes.py  test_email_processors.py
